{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 979,
  "lineage": "1fe49cd1-4e4a-d191-7366-be46d59fb579",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05578dce7412e0cb4",
            "association_id": "eipassoc-000d5722d78548bc3",
            "domain": "vpc",
            "id": "eipalloc-05578dce7412e0cb4",
            "instance": "i-0717e391b2458cb2b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0f63468aa106f13a4",
            "private_dns": "ip-172-16-11-100.us-west-2.compute.internal",
            "private_ip": "172.16.11.100",
            "public_dns": "ec2-54-202-46-233.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.46.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.main2",
            "aws_subnet.main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb4e786f15603b0d",
            "arn": "arn:aws:ec2:us-west-2:857361946257:instance/i-0717e391b2458cb2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0717e391b2458cb2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f63468aa106f13a4"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-07b180f9943bddca1"
              }
            ],
            "primary_network_interface_id": "eni-0f63468aa106f13a4",
            "private_dns": "ip-172-16-11-100.us-west-2.compute.internal",
            "private_ip": "172.16.11.100",
            "public_dns": "ec2-54-202-46-233.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.46.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b7b6f6514ce17a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042f91f01203c5bde",
            "tags": {
              "Name": "CustomMain"
            },
            "tags_all": {
              "Name": "CustomMain"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0876d5c34a9dc11c5"
            ]
          },
          "dependencies": [
            "aws_network_interface.main",
            "aws_network_interface.main2",
            "aws_subnet.main",
            "aws_subnet.main2",
            "aws_vpc.main",
            "data.aws_ami.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb4e786f15603b0d",
            "arn": "arn:aws:ec2:us-west-2:857361946257:instance/i-01bdc34f595811bdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bdc34f595811bdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deploy_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd817708e452df9d",
            "private_dns": "ip-172-31-2-202.us-west-2.compute.internal",
            "private_ip": "172.31.2.202",
            "public_dns": "ec2-34-221-58-157.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.58.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b585b469069dbeaa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_HTTP_S",
              "allow_tcp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdbd3127c7113b7a",
            "tags": {
              "Environment": "dev",
              "Name": "TestAppService",
              "Owner": "OlehSobchuk"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TestAppService",
              "Owner": "OlehSobchuk"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0142797016643939a",
              "sg-0b950fe6ad108f54a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploy",
            "aws_security_group.allow_http_s",
            "aws_security_group.allow_tcp",
            "data.aws_ami.web",
            "tls_private_key.deploy_key"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:internet-gateway/igw-0f6bda84976ea1125",
            "id": "igw-0f6bda84976ea1125",
            "owner_id": "857361946257",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-01566f8d89716e295"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:network-interface/eni-07b180f9943bddca1",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f0b71c99b29e5444",
                "device_index": 1,
                "instance": "i-0717e391b2458cb2b"
              }
            ],
            "id": "eni-07b180f9943bddca1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:de:7f:70:4e:1d",
            "owner_id": "857361946257",
            "private_dns_name": "ip-172-16-10-100.us-west-2.compute.internal",
            "private_ip": "172.16.10.100",
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0876d5c34a9dc11c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e35cdfa121479025",
            "tags": {
              "Name": "CustomMain"
            },
            "tags_all": {
              "Name": "CustomMain"
            }
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:network-interface/eni-0f63468aa106f13a4",
            "attachment": [
              {
                "attachment_id": "eni-attach-0222be6b49e7fe437",
                "device_index": 0,
                "instance": "i-0717e391b2458cb2b"
              }
            ],
            "id": "eni-0f63468aa106f13a4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:ef:46:30:68:05",
            "owner_id": "857361946257",
            "private_dns_name": "ip-172-16-11-100.us-west-2.compute.internal",
            "private_ip": "172.16.11.100",
            "private_ips": [
              "172.16.11.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0876d5c34a9dc11c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042f91f01203c5bde",
            "tags": {
              "Name": "CustomMain2"
            },
            "tags_all": {
              "Name": "CustomMain2"
            }
          },
          "dependencies": [
            "aws_subnet.main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:route-table/rtb-085852a3db38c1276",
            "id": "rtb-085852a3db38c1276",
            "owner_id": "857361946257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6bda84976ea1125",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteMain"
            },
            "tags_all": {
              "Name": "RouteMain"
            },
            "timeouts": null,
            "vpc_id": "vpc-01566f8d89716e295"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f32584b57841f919",
            "route_table_id": "rtb-085852a3db38c1276",
            "subnet_id": "subnet-042f91f01203c5bde"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:security-group/sg-0b950fe6ad108f54a",
            "description": "Allow HTTP(S) inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b950fe6ad108f54a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_HTTP_S",
            "name_prefix": "",
            "owner_id": "857361946257",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d62e482db835122"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:security-group/sg-0142797016643939a",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0142797016643939a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tcp",
            "name_prefix": "",
            "owner_id": "857361946257",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d62e482db835122"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:subnet/subnet-0e35cdfa121479025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-0e35cdfa121479025",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857361946257",
            "tags": {
              "Name": "CustomMain"
            },
            "tags_all": {
              "Name": "CustomMain"
            },
            "vpc_id": "vpc-01566f8d89716e295"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:subnet/subnet-042f91f01203c5bde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.11.0/24",
            "id": "subnet-042f91f01203c5bde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857361946257",
            "tags": {
              "Name": "CustomMain2"
            },
            "tags_all": {
              "Name": "CustomMain2"
            },
            "vpc_id": "vpc-01566f8d89716e295"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857361946257:vpc/vpc-01566f8d89716e295",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0b2cb2b089e906ad6",
            "default_route_table_id": "rtb-029dea17ee510568b",
            "default_security_group_id": "sg-0876d5c34a9dc11c5",
            "dhcp_options_id": "dopt-0432003572779fc80",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01566f8d89716e295",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-029dea17ee510568b",
            "owner_id": "857361946257",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}